client/styles.scss
@import 'o-colors/main';
@import 'components/core/main';


html {
  -webkit-font-smoothing: antialiased;
}

.o-header--minimal .o-header__masthead-mobile {
    display: block;
}

.o-header {
    color: #fff;
    z-index: 1;
    padding-bottom: 0;
    top: 0;
}

.o-header__container{
    position: relative;
    box-sizing: border-box;
    margin-left: auto;
    margin-right: auto;
    min-width: 240px;
    max-width: 1220px;
    padding:10px 10px 0 10px;
}

.o-header__visually-hidden{
  display: none;
}

.o-header__inner{
    clear: both;
    flex-wrap: wrap;
    display: flex;
    margin-left: -10px;
    zoom: 1;
}

.o-header__bottom{
  position: relative;
  float: left;
  box-sizing: border-box;
  flex: 1 1 0%;
  padding-left: 10px;
  display: block;
  flex-basis: 100%;
  min-width: 100%;
  max-width: 100%;
  width: 100%;
}


.o-header__masthead-mobile{
      padding: 18px 0;
}


.o-header__masthead-mobile{
    position: relative;
    background-image: url(https://image.webservices.ft.com/v1/images/raw/fticon:brand-ft-masthead?source=o-icons&tint=%23FFFFFF,%23FFFFFF&format=svg);
    width: 200px;
    height: 15px;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: 50%;
    background-color: transparent;
    vertical-align: baseline;
    display: block;
    margin: 0 auto;
}

figure {
  background-size: cover;
  height: 92vh;
  margin: 0;
  position: relative;
  background-image: url(Britannia--mobile.png);
  background-repeat: no-repeat;
}



 .o-typography-heading1 {
    font-size: 38px !important;
    line-height: 36px !important;
}

  .o-typography-lead{
    font-size: 26px;
    line-height: 28px;
    font-weight: normal;
    max-width: 610px;
  }


.o-typography-heading1, p.o-typography-lead {
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
  width: 100%;
  margin-right: 0;
}

.article-body {
      margin: 3em auto 1em;
}

.intro::first-letter {
  float: left;
  padding-right: 8px;
  font-size: 250%;

}

.intro {
  margin: 2em auto 0;
}

.o-typography-body-wrapper {
    margin-top: 0;
}

.o-typography-body-wrapper p {
  font: 19px/1.5 Georgia,serif;
}

// Form styles
.required-message{
  font-family: MetricWeb,sans-serif;
  color:#c00;
  font-size: 16px;
}

.ss-q-title {
  font-family: MetricWeb,sans-serif;
  display: block;
  margin: 25px 0 4px 0;
  padding: 0;
  font-size: 21px;
  line-height: 22px;
  font-weight: 600;
  color: #333333;
}

.ss-q-title span {
  color:#c00;
}

li.ss-choice-item{
  margin: 1em auto 1.5em
}

.ss-q-help, .ss-secondary-text{
    display: block;
    font-family: MetricWeb,sans-serif;
    margin-top: -2px;
    margin-bottom: 6px;
    color: #333333;
    font-size: 16px;
    line-height: 18px;
}

input[type=text]{
  border: 1px solid #cec6b9;
  border-radius: 2px;
  min-width: 280px;
}

textarea {
   border: 1px solid #cec6b9;
  border-radius: 2px;
  min-width: 100%;
}

.ss-choice-item input[type=radio]{
  border:1px solid #cec6b9;
}


.error-message{
  font-family: MetricWeb,sans-serif;
  color:#c00;
  font-size: 16px;
}

span.ss-choice-item-control.goog-inline-block{
margin-right: 4px;
}

.ss-choice-label{
  font-family: MetricWeb,sans-serif;
  color: #505050;
  font-size: 18px;
  font-weight: 400;
  line-height: 20px;
}

.ss-choice-label b {
  font-weight: 600;
  color: #333333;
}


.o-typography-body-wrapper ul{
  list-style-type: none;
 }

 .o-typography-body-wrapper h2 {
      margin-top: 35px;
 }

 .ss-section-description{
  font-family: MetricWeb,sans-serif;
  font-size: 16px;
  line-height: 18px;
  color: #333;
 }

.jfk-button{
    font-family: MetricWeb,sans-serif;
    font-weight: 600;
    color: #fff;
    border-style: none;
    background-color: #27757b;
    border-color: #27757b;
    background-size: 18px;
    margin: 28px auto 10px;
    min-height: 39px;
    min-width: 100%;
    padding: 8px 18px 8px 18px;
    font-size: 18px;
    line-height: 18px;
    border-width: 1px;
    border-radius: 4px;

}

  .jfk-button:hover{
    border-color: #2bbbbf;
  }

  .jfk-button:visited{
   color: #1d1d1d;
   background-color: #2bbbbf!important;
   border-color: #2bbbbf;
   }

// CHANGES to layout






.top-overlaid {
   position: absolute;
   max-width: 90%;
   bottom: 10px;
   color: #fff;
   width: 100vw;
   padding: 0 30px 0 10px;
}

.o-typography-heading1 {
  font-size: 36px;
  line-height: 34px;
  opacity: 0.9;
}

.o-typography-lead{
  font-size: 23px;
  line-height: 25px;
  max-width: 610px;
  opacity: 0.9;
}

@media only screen and (min-width: 740px) {

  .o-header__masthead-mobile{
    width: 262px;
    height: 22px;
  }

  .intro::first-letter {
  padding-right: 8px;
  font-size: 400%;

}

  .o-typography-lead{
      font-size: 28px;
    line-height: 28px;
  }

  .top-overlaid {
   position: absolute;
   bottom: 15px;
   color: #fff;
   width: 100vw;
   padding: 0 30px 0 80px;
}

  .o-typography-heading1 {
    font-size: 48px !important;
    line-height: 48px !important;
    width: 100%;
}

  .jfk-button{
    max-width: 320px;
  }

figure {
  background-size: cover;
  height: 100vh;
  margin: 0;
  position: relative;
  background-image: url(Britannia--mobile.png);
  background-repeat: no-repeat;
}


  .jfk-button{
    max-width: 400px;
  }

  // .img-desktop {
  //   display: block;
  // }
  //
  // .img-mobile {
  //   display: none;
  // }


}

@media only screen and (min-width: 980px) {

  .o-header__masthead-mobile{
    width: 250px;
    height: 15px;

  }

   .o-typography-heading1 {
    font-size: 58px !important;
    line-height: 58px !important;
    width: 100%;
}

  figure {
  background-size: cover;
  height: 100vh;
  margin: 0;
  position: relative;
  background-image: url(Britannia--desktop.png);
  background-repeat: no-repeat;
}







  // .img-desktop {
  //   display: block;
  // }
  //
  // .img-mobile {
  //   display: none;
  // }
}

